# TER-StartPU

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Report.md  run.sh
setup/: install.sh  remote-install.sh
src/: Matrix.hpp  MatrixDescriptor.hpp  arg_parser.hpp  blas.cpp  blas.hpp  blas_extensions.cu  blas_extensions.hpp  blas_extern.hpp  codelets.hpp  executor.hpp  gemm.cpp  headers_app.hpp  headers_std.hpp  kernels.cpp  kernels.hpp  kernels_cuda.cu  kernels_cuda.hpp  log.hpp  profiling.hpp  reference_code.hpp  sources.cmake  tile.hpp  vector.hpp
tutorial/: cast.cpp  cast.hpp  clean.sh  run.sh  vector_scal_cpu.cpp  vector_scal_cuda.cu  vector_scal_main.cpp
tutorial/solutions/: vector_scal_cpu_ref.c  vector_scal_cuda_ref.cu  vector_scal_task_insert_ref.c
